<resources>

    <string name="app_name">Take a Hike</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_geo_caching">Take a Hike</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="splash_title">Take a Hike!</string>
    <string name="add_destination">Add Destination</string>
    <string name="set_destination">Set Destination</string>
    <string name="login_error">Login Failed</string>
    <string name="title_activity_map">Map</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="remember">Remember me?</string>
    <string name="report_error_message">Crash detective on previous shutdown. Would you like to send an error report?</string>
    <string name="title_activity_add_destination">Add Destination</string>
    <string name="title_activity_set_destination">Set Destination</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_log_book">LogBook</string>
    <string name="title_activity_sign_log_book">Sign Logbook</string>
    <string name="title_activity_unhandled_exception">Unhandled Error</string>
    <string name="title_activity_user_settings">UserSettings</string>
    <string name="Disable_Twitter">Disable Twitter</string>
    <string name="Metric">Metric</string>
    <string name="Imperial">Imperial</string>
    <string name="Analytics">Send anony. Usage Data</string>
    <string name="Latitude">Latitude</string>
    <string name="Longitude">Longitude</string>
    <string name="Description">Description</string>
    <string name="Add">Add</string>
    <string name="view_logbook">View Logbook</string>
    <string name="sign_logbook">Sign Logbook</string>
    <string name="message">Message</string>
    <string name="sign">sign</string>
    <string name="error">error</string>
    <string name="tweet" formatted="false">I just visited a Geocache a %s</string>
    <string name="no_message">Please enter a message</string>
    <string name="retrieve_entry_failure"> "Could not retrieve log entries"</string>
    <string name="unknown_user">Unknown</string>
    <string name="await_gps">Awaiting GPS information…</string>
    <string name="select_dest">Please select a destination</string>
    <string name="thank_you">Thank you</string>
    <string name="destination_description" formatted="false">Distance: %s %s%n%nDescription: %s</string>
    <string name="add_picture">Add Picture</string>
    <string name="remove_picture">Remove Picture</string>
    <string name="image_content_description">Image of the geocache location</string>
    <string name="create_cache">Create Cache</string>
    <string name="title_activity_take_picture">Destination Picture</string>
    <string name="capture">Capture</string>
    <string name="take_a_hike">Take a hike</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">email</string>
    <string name="ad_space">Your Ad Here!</string>
    <string name="ad_free">Ad free</string>
    <string name="updated_to_premium">Restart to remove ads</string>
    <string name="title_activity_about">About</string>
    <string name="about_text">Take a Hike is a simple GeoCaching Application.\n\nOnce a destination has been selected the blue arrow points the bearing on the map that heads directly to the destination. The red arrow indictates how far off the top of the phone is from facing that direction. Once the two arrows are lined up you can start walking forwards towards your selected destination.</string>
    <string name="about">About</string>
    <string name="compass">compass</string>
    <string name="Direction">Direction</string>
    <string name="title_activity_view_desination">View Destination</string>
    <string name="creator">Creator:</string>
    <string name="Date">Date:</string>
    <string name="Descriptiony">Description:</string>
    <string name="blank"></string>
</resources>