<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@+id/et_username"
        android:contentDescription="@string/take_a_hike"
        android:src="@drawable/icon" />

	<Button
	    android:id="@+id/btn_signup"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:onClick="onClick"
	    android:text="@string/signup" />

	<EditText
	    android:id="@+id/et_email"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/btn_signup"
	    android:layout_alignParentLeft="true"
	    android:ems="10"
	    android:hint="@string/email"
	    android:onClick="onClick" />

	<Button
	    android:id="@+id/btn_login"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/et_email"
	    android:layout_alignParentLeft="true"
	    android:onClick="onClick"
	    android:text="@string/login" />

	<CheckBox
	    android:id="@+id/cb_remember"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/btn_login"
	    android:layout_alignParentLeft="true"
	    android:text="@string/remember" />

	<EditText
	    android:id="@+id/et_password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/cb_remember"
	    android:layout_alignParentLeft="true"
	    android:ems="10"
	    android:hint="@string/password"
	    android:inputType="textPassword" />

	<EditText
	    android:id="@+id/et_username"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_above="@+id/et_password"
	    android:layout_alignParentLeft="true"
	    android:ems="10"
	    android:hint="@string/username" />

</RelativeLayout>