<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="false" >

    <com.google.android.maps.MapView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/mapview"
        style="@style/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:apiKey="0rpsRSDBOEivtJz-r2Y9ZPvSRLFBuO5MUYc3-3Q"
        android:clickable="true"
        android:visibility="visible" />

    <View
        android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btn_set_dest_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="false"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@id/strut"
        android:onClick="onClick"
        android:text="@string/set_destination" />

    <Button
        android:id="@+id/btn_add_dest_screen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/strut"
        android:layout_alignParentLeft="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="onClick"
        android:text="@string/add_destination" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="@android:color/white"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/ad_space"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_view_logbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/btn_add_dest_screen"
        android:onClick="onClick"
        android:text="@string/view_logbook"
        android:visibility="invisible" />

    <Button
        android:id="@+id/btn_sign_logbook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView1"
        android:layout_alignLeft="@+id/btn_add_dest_screen"
        android:layout_alignParentRight="true"
        android:clickable="false"
        android:onClick="onClick"
        android:text="@string/sign_logbook"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/img_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/compass"
        android:src="@drawable/compass_raw" />

    <ImageView
        android:id="@+id/img_direction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/Direction"
        android:src="@drawable/direction_raw" />

    <TextView
        android:id="@+id/tv_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_set_dest_screen"
        android:layout_centerHorizontal="true"
        android:text="@string/select_dest"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FF0000" />

</RelativeLayout>